--- a/index.html
+++ b/index.html
@@ -150,11 +150,31 @@
                     </div>
                 </div>
             </div>
-            <a href="/quiz-1.html" class="sec6-btn">Jetzt Gutschein sichern</a>
         </div>
     </section>
 
+    <section class="section-4">
+        <div class="slider">
 
+            <button class="slider-btn left" id="prevBtn" aria-label="Previous image">
+                ‹
+            </button>
+
+            <div class="slider-image-wrapper">
+                <img
+                id="sliderImage"
+                src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=1600&q=80"
+                alt="Slider image">
+            </div>
+
+            <button class="slider-btn right" id="nextBtn" aria-label="Next image">
+                ›
+            </button>
+
+        </div>
+        <a href="/quiz-1.html" class="sec4-btn">Jetzt Gutschein sichern</a>
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
