--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p class="section1-text-info">Jetzt Gutschein mit radikalen Rabatten sichern!</p>
                 <h2 class="section1-title">SCHATTKE AKTION <span class="section1-title-bold">Osterkind- Fotoshooting- Aktion </span>Osterkind Special</h2>
                 <p class="section1-show">Für alle Familien aus Stade oder Buxtehude und Umgebung</p>
-                <a href="#" class="section-btn">Hier gehts zu den Gutscheinen</a>
+                <a href="/quiz-1.html" class="section-btn">Hier gehts zu den Gutscheinen</a>
                 <p class="section1-text-info">Aufgepasst: Sichert euch frühzeitig euren Termin! <br>Die Fotoshootings finden nur vom 04.03.-08.03.2024 statt!</p>
             </div>
         </div>
@@ -174,6 +174,63 @@
         </div>
         <a href="/quiz-1.html" class="sec4-btn">Jetzt Gutschein sichern</a>
 
+    </section>
+
+    <section class="section-5">
+        <div class="container section-5-block">
+            <h3 class="sec5-title">Verpasse keinen Augenblick - Unsere spektakulären Fotoshooting Aktionen über das ganze Jahr verteilt!</h3>
+            <div class="sec5-contents-block">
+                <div class="sec5-content">
+                    <img src="images/kid-easter-photo3.avif" alt="image">
+                    <h6>Family Time</h6>
+                    <p>Die magische Möglichkeit, lebendige Erinnerungen mit deinen Liebsten und engsten Vertrauten einzufangen.</p>
+                </div>
+                <div class="sec5-content">
+                    <img src="images/kid-easter-photo7.jpg" alt="image">
+                    <h6>Newborn & Babybauch</h6>
+                    <p>Schwangerschaft auf einzigartige Weise in Bildern festhalten und diese wertvollen Momente für immer bewahren.</p>
+                </div>
+                <div class="sec5-content">
+                    <img src="images/kid-easter-photo6.webp" alt="image">
+                    <h6>Tierisches Fotoshooting</h6>
+                    <p>Ich widme ausgiebig Zeit, damit sich dein geliebtes Haustier im Studio einfinden und sich wohlfühlen kann.</p>
+                </div>
+                <div class="sec5-content">
+                    <img src="images/kid-easter-photo5.webp" alt="image">
+                    <h6>Cake Smash Shootings</h6>
+                    <p>Die besonderen Fotos zum ersten Geburtstag eures kleinen Wunders.</p>
+                </div>
+            </div>
+            <a href="/quiz-1.html" class="section5-btn">Jetzt Gutschein sichern</a>
+        </div>
+    </section>
+
+    <section class="section-7">
+        <div class="container section-7-contents d-flex justify-content-between align-items-center">
+            <div class="section-7-texts d-flex flex-column">
+                <p class="section-7-text-top">Willkommen bei </p>
+                <h6 class="section-7-name">Ringfoto Schattke</h6>
+                <p class="section-7-text-untertitle">Mehr als 100 Jahre Geschichte</p>
+                <P class="section-7-text-bottom">Unsere Fotografen in Stade und Buxtehude freuen sich darauf, dich in unserem top ausgestatteten Fotostudio in Szene zu setzen.</P>
+                <P class="section-7-text-bottom">Ob du ein professionelles Fotoshooting wünschst, über die Anschaffung einer neuen Kamera oder den Kauf von Kamerazubehör nachdenkst oder einfach nur ein paar Bilder entwickeln lassen möchtest: Bei unseren Experten von Foto Schattke bist du in jedem Fall richtig. Fotografie ist unsere Leidenschaft!</P>
+            </div>
+            <div class="sec7-block-images">
+                <img src="images/kid-easter-photo1.jpg" alt="image">
+                <img src="images/kid-easter-photo2.jpg" alt="imageimage">
+            </div>
+        </div>
+    </section>
+
+    <!-- section google-map -->
+    <section class="section-13 py-5">
+        <div class="block-google-map">
+            <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2428.233173836531!2d13.402032377110048!3d52.51111913688651!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e27dade5561%3A0x2454d91ffab308fa!2sWallstra%C3%9Fe%209-13%2C%2010179%20Berlin!5e0!3m2!1sru!2sde!4v1746625321303!5m2!1sru!2sde" title="our location"></iframe>
+        </div>
+        <div class="legal-privacy">
+            <a href="#">Impessum</a>
+            <a href="#">Datenschutzerklärung</a>
+            <a href="#">Cookie Richtlinien</a>
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
