--- a/quiz-2.html
+++ b/quiz-2.html
@@ -19,9 +19,9 @@
 
             <a href="#" class="logo d-inline-block mb-4">LOGO</a>
 
-            <p class="quiz-progress">4 Fragen bis zum Gutschein </p>
+            <p class="quiz-progress">2 Fragen bis zum Gutschein </p>
 
-            <h2 class="mb-5">Welches Bild gefällt dir am Besten?</h2>
+            <h2 class="mb-5">Schon mal ein Kinder-Fotoshooting gehabt?</h2>
 
             <div class="option-block">
                 <a href="/quiz-3.html" class="option">
@@ -36,16 +36,6 @@
                     <button class="text-option btn">2</button>
                 </a>
 
-                <a href="" class="option">
-                    <img src="https://images.unsplash.com/photo-1483721310020-03333e577078?auto=format&fit=crop&w=1600&q=80
-s" alt="Option 3">
-                    <button class="text-option btn">3</button>
-                </a>
-                <a href="" class="option">
-                    <img src="https://images.pexels.com/photos/417173/pexels-photo-417173.jpeg?auto=compress&cs=tinysrgb&w=1600
-" alt="Option 3">
-                    <button class="text-option btn">4</button>
-                </a>
             </div>
             <div class="legal-privacy mt-auto text-center">
                 <a href="#">Impressum</a>
