--- a/quiz-4.html
+++ b/quiz-4.html
@@ -21,30 +21,30 @@
 
             <p class="quiz-progress">Letzte Frage! </p>
 
-            <h2 class="mb-5">Seid ihr aktuell ein Paar?</h2>
+            <h2 class="mb-5">Welches Bild gefällt dir am Besten?</h2>
 
             <div class="option-block">
                 <a href="/gutschein-sichern.html" class="option">
                     <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?auto=format&fit=crop&w=1600&q=80
 " alt="Option 1">
-                    <button class="text-option btn">Ja, frisch verliebt!</button>
+                    <button class="text-option btn">1</button>
                 </a>
 
                 <a href="/gutschein-sichern.html" class="option">
                     <img src="https://images.pexels.com/photos/374870/pexels-photo-374870.jpeg?auto=compress&cs=tinysrgb&w=1600
 " alt="Option 2">
-                    <button class="text-option btn">Schon länger zusammen!</button>
+                    <button class="text-option btn">2</button>
                 </a>
 
                 <a href="/gutschein-sichern.html" class="option">
                     <img src="https://images.unsplash.com/photo-1483721310020-03333e577078?auto=format&fit=crop&w=1600&q=80
 s" alt="Option 3">
-                    <button class="text-option btn">Verlobt oder verheiratet!</button>
+                    <button class="text-option btn">3</button>
                 </a>
                 <a href="/gutschein-sichern.html" class="option">
                     <img src="https://images.pexels.com/photos/417173/pexels-photo-417173.jpeg?auto=compress&cs=tinysrgb&w=1600
 " alt="Option 3">
-                    <button class="text-option btn">Noch offen / kompliziert</button>
+                    <button class="text-option btn">4</button>
                 </a>
             </div>
             <div class="legal-privacy mt-auto text-center">
